--- a/src/componets/Header/header.module.css
+++ b/src/componets/Header/header.module.css
@@ -1,22 +1,26 @@
 .header{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     border: 3px solid black;
 }
 .navigation{
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     gap: 2.5rem;
 }
+
+.cartConteiner{
+  margin-left: auto;
+
+}
+
 .cart{
     margin-right: 1rem;
     background-color: rgb(255, 255, 255);
     padding: 10px;
     border-radius: 50%;
 }
-
 .shoppingCart{
     width: 16px;
     height: 16px;
@@ -38,4 +42,10 @@ a {
  
   a:hover:after {
     width: 90%;
+  }
+
+  .title{
+    padding: 10px;
+    font-size: 2rem;
+    margin-right: auto;
   }
